fix : fix the ifame overlapping error

--- a/frontend/sel-frontend/src/components/campaign/Campaign.module.css
+++ b/frontend/sel-frontend/src/components/campaign/Campaign.module.css
@@ -1,27 +1,29 @@
 .campaignContainer {
-    position: relative;
-    width: 390px;
-    height: calc(100vh - 160px); /* Adjust height based on header and footer */
-    margin-top: 80px; /* Adjust based on header height */
-    margin-bottom: 80px; /* Adjust based on footer height */
-    overflow: hidden; /* Prevents overflow from causing issues */
-  }
-  
-  .iframe {
-    width: 100%;
-    height: 100%;
-    border: none; /* Removes iframe border */
-  }
-  
-  .campaignSlide {
-    position: fixed;
-    bottom: 20px; /* Position it above the bottom of the viewport */
-    left: 50%;
-    transform: translateX(-50%); /* Center horizontally */
-    z-index: 1600; /* Ensure it appears above the iframe */
-    background-color: white;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    padding: 10px;
-    width: 80%; /* Adjust width as needed */
+  position: relative;
+  width: 390px;
+  height: calc(100vh - 160px); /* Adjust height based on header and footer */
+  margin-top: 80px; /* Adjust based on header height */
+  margin-bottom: 80px; /* Adjust based on footer height */
+  overflow: hidden; /* Prevents overflow from causing issues */
+}
+
+.iframe {
+  width: 100%;
+  height: 100%;
+  border: none; /* Removes iframe border */
+}
+
+.openModalButton {
+  position: fixed;
+  bottom: 120px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1000; /* High enough to be above other content */
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  background-color: #008DFF;
+  color: white;
+  cursor: pointer;
 }
